syntax = "proto3";

option go_package = "github.com/youlingdada/nacos-demo/grpc/user";

package user;


service UserService{
  rpc Login(LoginRequest) returns(LoginResponse){}
}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message LoginResponse{
  int32 code = 1;
  string message = 2;
  string data = 3;
}